--- a/clien-stream/pom.xml
+++ b/clien-stream/pom.xml
@@ -225,6 +225,13 @@
 			<version>1.7.7</version>
 		</dependency>
 
+		<!-- mockito -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.10.17</version>
+		</dependency>
+
 		<!-- junit -->
 		<dependency>
 			<groupId>junit</groupId>
